--- a/package.json
+++ b/package.json
@@ -5,5 +5,10 @@
     "daisyui": "^2.51.5",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1"
+  },
+  "dependencies": {
+    "global": "^4.4.0",
+    "react-script": "^2.0.5",
+    "react-scripts": "^5.0.1"
   }
 }
