--- a/ch05/ch05_3/package.json
+++ b/ch05/ch05_3/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^8.0.7",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -50,6 +51,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/chance": "^1.1.3",
     "@types/luxon": "^3.3.0",
+    "@types/redux-logger": "^3.0.9",
     "autoprefixer": "^10.4.14",
     "daisyui": "^2.52.0",
     "postcss": "^8.4.24",
