--- a/ch05/ch05_3/package.json
+++ b/ch05/ch05_3/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -52,6 +53,7 @@
     "@types/chance": "^1.1.3",
     "@types/luxon": "^3.3.0",
     "@types/redux-logger": "^3.0.9",
+    "@types/redux-thunk": "^2.1.0",
     "autoprefixer": "^10.4.14",
     "daisyui": "^2.52.0",
     "postcss": "^8.4.24",
