--- a/ch05/ch05_4/package.json
+++ b/ch05/ch05_4/package.json
@@ -15,6 +15,8 @@
     "chance": "^1.1.11",
     "luxon": "^3.3.0",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.7",
     "react-scripts": "5.0.1",
@@ -52,6 +54,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/chance": "^1.1.3",
     "@types/luxon": "^3.3.0",
+    "@types/react-dnd": "^3.0.2",
     "@types/redux-logger": "^3.0.9",
     "@types/redux-thunk": "^2.1.0",
     "autoprefixer": "^10.4.14",
