--- a/ch06/ch06_1/package.json
+++ b/ch06/ch06_1/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.2.13",
     "@types/react-dom": "^18.2.6",
     "chance": "^1.1.11",
+    "global": "^4.4.0",
     "luxon": "^3.3.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
@@ -21,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
+    "react-script": "^2.0.5",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
