--- a/ch07/ch07_4_server/package.json
+++ b/ch07/ch07_4_server/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^20.4.2",
     "nodemon": "^3.0.1",
